--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # General
 venv/
+.venv/
 output/
 
 # Build and package files
@@ -11,6 +12,7 @@ node_modules/
 dist/
 *.jar
 pysoem/pysoem.c
+**/*.so
 
 # Log files
 **/log/**/*
@@ -40,3 +42,4 @@ Thumbs.db
 *.flv
 *.mov
 *.wmv
+*.swp
